flux/apps/smart-home/echomuse-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echomuse-controller
  namespace: homeassistant
spec:
  selector:
    app: echomuse-controller
  type: LoadBalancer
  ports:
    - name: ws
      port: 8767
      protocol: TCP
      targetPort: 8767
    - name: ws-tls
      port: 8770
      protocol: TCP
      targetPort: 8770
    - name: echomuse-controller
      port: 8768
      protocol: TCP
      targetPort: 8768
    - name: emos-01
      port: 16001
      protocol: TCP
      targetPort: 16001
    - name: emos-03
      port: 16003
      protocol: TCP
      targetPort: 16003
